<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="z.p.MainActivity">

    <Switch
        android:id="@+id/pay_service_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/action_to_open"
        android:textOff="@string/textOff"
        android:textOn="@string/textOn" />

    <EditText
        android:id="@+id/tv_device_imei"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="请输入IMEI (必须唯一，打电话输入*#06#)"
        android:padding="10dp" />

    <Button
        android:id="@+id/btn_imei"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="保存IMEI"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="4sp"
        android:padding="10dp"
        android:text="@string/tips"
        android:textAlignment="viewStart" />

    <TextView
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="4sp"
        android:padding="10dp"
        android:textAlignment="viewStart" />

    <Button
        android:id="@+id/btn_log"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_dark"
        android:padding="10dp"
        android:text="@string/action_to_log"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/action_to_update"
        android:textStyle="bold" />

</LinearLayout>
